забыл favicon поменять

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="robots" content="noindex">
     <link rel="stylesheet" href="./css/default.css">
     <link rel="stylesheet" href="./css/main.css">
-    <link rel="shortcut icon" href="favicon.png">
+    <link rel="shortcut icon" href="./img/album-cover.png">
 
     <script src="./js/index.js"></script>
     <script src="https://yastatic.net/jquery/3.3.1/jquery.js"></script>
