--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="robots" content="noindex">
     <link rel="stylesheet" href="./css/default.css">
     <link rel="stylesheet" href="./css/main.css">
-    <link rel="shortcut icon" href="./img/album-cover.png">
+    <link rel="shortcut icon" href="./favicon.png">
 
     <script src="./js/index.js"></script>
     <script src="https://yastatic.net/jquery/3.3.1/jquery.js"></script>
@@ -65,7 +65,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
 
         <div class="song-area">
             <div class="cover-wrap">
-                <img class="cover" src="./img/album-cover.png">
+                <img class="cover" src="https://avatars.yandex.net/get-music-content/193823/1820a43e.a.5517056-1/m100x100">
             </div>
 
             <div class="song-data">
@@ -280,7 +280,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
 
                 <div class="song-area">
                     <div class="cover-wrap">
-                        <img class="cover" src="./img/album-cover.png">
+                        <img class="cover" src="https://avatars.yandex.net/get-music-content/193823/1820a43e.a.5517056-1/m100x100">
                     </div>
 
                     <div class="song-data">
