--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <p class="card-description card-description_big">Так держать! За последнюю неделю вы потратили на
                         10% меньше ресурсов, чем неделей ранее.</p>
                     <div class="card-data card-data_graph">
-                        <img class="card-data_graph-img" src="./img/card-data_graph-img.png">
+                        <img class="card-data_graph-img" src="./img/waves.svg">
                     </div>
                 </div>
 
