--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="shortcut icon" href="./favicon.jpeg">
 
     <script src="https://yastatic.net/jquery/3.3.1/jquery.js"></script>
-    <link rel="stylesheet" href="js/owl-carousel/owl.carousel.css" />
-    <script src="js/owl-carousel/owl.carousel.min.js"></script>
+    <!-- <link rel="stylesheet" href="js/owl-carousel/owl.carousel.css" />
+    <script src="js/owl-carousel/owl.carousel.min.js"></script> -->
     <script src="./js/main.js"></script>
 </head>
 
@@ -217,7 +217,8 @@
                         заканчивается молоко. Вы хотите добавить его в список покупок?</p>
 
                     <div class="buttons-wrap">
-                        <button class="button button_yellow" type="button">Да</button><button class="button">Нет</button>
+                        <button class="button button_yellow" type="button">Да</button><button
+                            class="button">Нет</button>
                     </div>
 
                 </div>
@@ -241,12 +242,8 @@
 
                 <div class="card card_size_l critical">
                     <div class="card-heading heading-critical">
-                        <div class="card-icon-wrap">
-                            <div id="carousel">
-                                <div class="carousel-element">
-                                    <img class="card-icon" src="img/cam.svg">
-                                </div>
-                            </div>
+                        <div class="card-icon-wrap card-icon-cam">
+                            <img class="card-icon" src="img/cam.svg">
                         </div>
                         <h3 class="card-title">Пылесос застрял</h3>
                     </div>
@@ -256,11 +253,7 @@
                     </div>
                     <p class="card-description card-description_big description_critical">Робопылесос не смог сменить
                         свое местоположение в течение последних 3 минут. Похоже, ему нужна помощь.
-                        <div class="critical-cam" onload="initCriticalCam()" touch-action="none"
-                            style="background-position: 0px 0px; background-size: 100%; filter: brightness(100%);">
-
-                        </div>
-
+                        <div class="critical-cam"></div>
                     </p>
                 </div>
 
