--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="./css/default.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="shortcut icon" href="./favicon.png">
-
-    <script src="./js/main.js"></script>
 </head>
-
 <body>
     <header>
         <img class="header-logo" src="img/yd2.png">
@@ -212,7 +209,13 @@
                     </div>
                     <p class="card-description card-description_big description_critical">Кажется, в холодильнике
                         заканчивается молоко. Вы хотите добавить его в список покупок?</p>
-
+                    <div class="purchase-list-wrap" style="display: none;">
+                        <p class="card-description card-description_big description_critical">Список покупок:</p>
+                        <ol class="purchase-list">
+                            <li class="purchase-list__item">Хлеб</li>
+                            <li class="purchase-list__item">Молоко</li>
+                        </ol>
+                    </div>
                     <div class="buttons-wrap">
                         <button class="button button_yellow" type="button">Да</button><button
                             class="button">Нет</button>
@@ -255,7 +258,7 @@
                 </div>
 
 
-                <div class="card card_size_s" style="border-radius: 22px;">
+                <div class="card card_size_s">
                     <div class="card-heading">
                         <div class="card-icon-wrap">
                             <img class="card-icon" src="img/kettle.svg">
@@ -280,6 +283,7 @@
             <a class="footer-menu__link" href="./assets/license.pdf" target="blank">Лицензия</a>
         </menu>
     </footer>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
