--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="ru">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <meta name="robots" content="noindex">
+    <link rel="shortcut icon" href="./favicon.jpeg">
     <link rel="stylesheet" href="./css/default.css">
     <link rel="stylesheet" href="./css/main.css">
-    <link rel="shortcut icon" href="./favicon.png">
 </head>
 <body>
     <header>
