--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width">
     <meta name="robots" content="noindex">
     <link rel="shortcut icon" href="./favicon.jpeg">
-    <link rel="stylesheet" href="./css/main.min.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
     <header>
@@ -249,6 +249,7 @@
             <a class="footer-menu__link" href="./assets/license.pdf" target="blank">Лицензия</a>
         </menu>
     </footer>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
