--- a/index.html
+++ b/index.html
@@ -249,7 +249,9 @@
             <a class="footer-menu__link" href="./assets/license.pdf" target="blank">Лицензия</a>
         </menu>
     </footer>
-    <script src="./js/main.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded",()=>{const buttonsContainer=document.querySelector(".buttons-wrap");const fridgeInfoContainer=document.querySelector(".card_size_m:nth-child(8) .card-description");const confirmPurchaseButton=document.querySelector(".buttons-wrap .button_yellow");const purchaseListContainer=document.querySelector(".purchase-list-wrap");confirmPurchaseButton.onclick=()=>{fridgeInfoContainer.remove();buttonsContainer.style.display="none";purchaseListContainer.style.display="block"};document.getElementsByClassName("header-menu__switcher")[0].addEventListener("click",function(){document.getElementsByClassName("header-menu")[0].classList.toggle("header-menu_active")})})
+    </script>
 </body>
 
 </html>
